tests/diagnostics/negative/type_mismatch.must
error[TYPECK_E_ASSIGN_MISMATCH] typeck: assignment type mismatch
expected i32, found string
variable total was declared here
help: assign a value of the declared binding type, or change the binding annotation at its declaration
